--- a/src/components/pages/PillKnowledgeTestPage/index.module.css
+++ b/src/components/pages/PillKnowledgeTestPage/index.module.css
@@ -1,6 +1,6 @@
 .pageContainer {
   font-family: 'Arial', sans-serif;
-  background-color: #FFF;
+  background-color: #F0F4F8;
   color: #333;
   padding: 16px;
 }
