--- a/src/components/atoms/Button/index.module.css
+++ b/src/components/atoms/Button/index.module.css
@@ -48,6 +48,18 @@
     background: transparent;
     box-shadow: none;
   }
+
+  .reviewButton {
+    background-color: rgba(29, 22, 23, 0.1);
+    border-radius: 60px;
+    padding: 12px 24px;
+    color: #FFF;
+    font-size: 15px;
+    text-align: center;
+    display: block;
+    cursor: pointer;
+    text-decoration: none;
+  }
 }
 
 .primary:hover,
